# dp-group-stats

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/dp_group_stats/: __init__.py  accounting.py  config.py  mechanisms.py  periods.py  policy.py  simulation.py
tests/: test_accounting.py  test_config.py  test_mechanisms.py  test_periods.py  test_policy.py  test_simulation.py
